--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@intracto/stylelint-config-intracto",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "StyleLint presets for Intracto internal code and projects",
   "keywords": [
     "stylelint"
@@ -25,9 +25,10 @@
   "license": "MIT",
   "peerDependencies": {
     "stylelint": "11.1.1",
+    "stylelint-config-airbnb": "^0.0.0",
     "stylelint-config-prettier": "6.0.0",
-    "stylelint-prettier": "1.1.1",
     "stylelint-config-recommended-scss": "4.1.0",
+    "stylelint-prettier": "1.1.1",
     "stylelint-scss": "3.13.0"
   }
 }
