--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "node": ">=12"
   },
   "license": "MIT",
-  "peerDependencies": {
+  "dependencies": {
     "stylelint": "11.1.1",
     "stylelint-config-prettier": "6.0.0",
     "stylelint-config-recommended-scss": "4.1.0",
