--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@intracto/stylelint-config-intracto",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "description": "StyleLint presets for Intracto internal code and projects",
   "keywords": [
     "stylelint"
@@ -20,7 +20,7 @@
     "/scss"
   ],
   "engines": {
-    "node": ">=12"
+    "node": "^10.12.0 || >=12.0.0"
   },
   "license": "MIT",
   "peerDependencies": {
