--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@intracto/stylelint-config-intracto",
   "version": "0.1.12",
-  "description": "StyleLint presets for Intracto internal code and projects",
+  "description": "stylelint presets for Intracto internal code and projects",
   "keywords": [
     "stylelint"
   ],
@@ -17,10 +17,8 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "stylelint": "11.1.1",
-    "stylelint-config-prettier": "6.0.0",
-    "stylelint-config-recommended-scss": "4.1.0",
-    "stylelint-prettier": "1.1.1",
-    "stylelint-scss": "3.13.0"
+    "stylelint": "^13.2.1",
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-scss": "^3.14.2"
   }
 }
